# vex-sdk-desktop

./: .gitignore  Cargo.toml  README.md  frame.txt  rust-toolchain.toml
docs/: architecture.md
examples/: display.rs  distance.rs
ipc/: Cargo.toml
ipc/examples/: oscillator.rs
ipc/src/: error.rs  lib.rs
simulator/: Cargo.toml
simulator/src/: device.rs  display.rs  lib.rs
simulator/src/canvas/: mod.rs
simulator/src/canvas/img/: mod.rs
simulator/src/frontend/: ipc.rs  mod.rs  windowed.rs
simulator/src/frontend/windowed/: macos.rs
simulator/src/sdk/: display.rs  task.rs
src/: canvas.rs  display.rs  lib.rs
src/canvas/: font.rs
src/sdk/: display.rs  mod.rs  system.rs  task.rs
viewer/: Cargo.toml
viewer/src/: macos.rs  main.rs
